objects/ASI_CRM_Empty_Bottle__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Empty Bottles</relationshipLabel>
        <relationshipName>Empty_Bottles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Greater_Region_Code__c</fullName>
        <label>Greater Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Empty Bottles</relationshipLabel>
        <relationshipName>Empty_Bottles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>标签破损/无标签</fullName>
                </value>
                <value>
                    <fullName>月份or门店调整</fullName>
                </value>
                <value>
                    <fullName>黑瓶盖补传</fullName>
                </value>
                <value>
                    <fullName>发货未关闭/无发货</fullName>
                </value>
                <value>
                    <fullName>特供/日店专供</fullName>
                </value>
                <value>
                    <fullName>跨区/跨城市借货</fullName>
                </value>
                <value>
                    <fullName>未授权城市设置错误</fullName>
                </value>
                <value>
                    <fullName>15年5月前贴标的香槟/气泡酒</fullName>
                </value>
                <value>
                    <fullName>17年4月前贴标的尚选 </fullName>
                </value>
                <value>
                    <fullName>灰瓶盖</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Tier__c</fullName>
        <label>WS Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Empty Bottle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Item_Group__c</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>ASI_CRM_Quantity__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EB-{0000000}</displayFormat>
        <label>Date Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Empty Bottles</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Empty_Bottle</fullName>
        <active>true</active>
        <label>ASI CRM CN Empty Bottle</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>